# cpp.in.samples

./: CMakeLists.txt  README.md  hello_world
.github/: copilot-instructions.md
C  for Linux/Anhang A/: myhome.c
C  for Linux/Kapitel 10/: threads1.c  threads11.c  threads15.c  threads16.c
C  for Linux/Kapitel 11/: client2.c  multicast-server.c  server2.c  uds-client.c  uds-server.c
C  for Linux/Kapitel 12/: mysql1.c
C  for Linux/Kapitel 13/: curses2.c  curses6.c  setbaud.c  spaceglider.c  terminfos.c
C  for Linux/Kapitel 14/: gtk4.c
C  for Linux/Kapitel 15/: base.h
C  for Linux/Kapitel 16/: Makefile4.txt  datei.c  memoryleak.c  myequal.c
C  for Linux/Kapitel 2/: backward.c  filecopy.c  write_file.c
C  for Linux/Kapitel 3/: ResetTime.c
C  for Linux/Kapitel 6/: groupname.c  passwortinfo2.c
C  for Linux/Kapitel 6 internals/: read_shadow2.c
C  for Linux/Kapitel 7/: child.c  child2.c  exec3.c  exec_child.c  getenv-demo.c
C  for Linux/chapter 1/: CMakeLists.txt  control_flow.cpp  demonstrates basic C program structure.c
C  for Linux/chapter 1 basics/: hello_world  hello_world.ilk
C  for Linux/chapter Kapitel 2 FileIO/: poll_stdin.c
algorithms/: CMakeLists.txt  searching.cpp  sorting  sorting.cpp  stl_algorithms.cpp
basics/: control_flow.cpp  hello_world  hello_world.cpp  variables_types  variables_types.cpp
cpp.in.samples/: pyvenv.cfg
modern_cpp/: CMakeLists.txt  lambda_example.cpp  move_semantics.cpp  smart_pointers.cpp  templates.cpp
stl/: CMakeLists.txt  map_example.cpp  set_example.cpp  vector_example.cpp
(+256 files in other folders)
