# Add executable for smart pointers
add_executable(smart_pointers smart_pointers.cpp)

# Add executable for templates
add_executable(templates templates.cpp)

# Add executable for lambda expressions
add_executable(lambda_example lambda_example.cpp)

# Add executable for move semantics
add_executable(move_semantics move_semantics.cpp)
